--- a/data.yml
+++ b/data.yml
@@ -142,6 +142,12 @@ limitedTime:
   status: active
   deadline: '2025-03-10T23:59:59'
 drafts:
+- name: HackABand
+  description: You ship art, We ship you Wrist Band
+  website: https://hackaband.vercel.app/
+  slack: https://hackclub.slack.com/archives/C089WSLC59V
+  slackChannel: "#hack-a-band"
+  status: draft
 - name: Minus Twelve
   description: Create some kind of useful tool and receive a shiny new microcontroller!
   website: https://sporeball.dev/minus-twelve
